login page build a page that enables returning user signinto the platform to access it [Finished #159576874]

--- a/UI/index.html
+++ b/UI/index.html
@@ -28,15 +28,15 @@
     </div>
   </header>
   <main>
-    <section id="showcase">
-      <!--background image-->
-      <!-- <img src="./img/stackflow.jpg" alt=""> -->
+    <!-- <section id="showcase"> -->
+      <!-- background image-->
+      <!-- <img src="./img/stackflow.jpg" alt="">
       <aside>
         <h1>Learn, Share, Build</h1>
         <p>Each month, over millions of developers come to StackOverflowLite to learn, share their knowledge, and build their collaborative relationships.</p>
         <p>Join a growing community developers.</p>
       </aside>
-    </section>
+    </section> -->
     <section>
       <div class="h-content">
         <div id="content-header">
@@ -65,9 +65,81 @@
         <div class="who-asked"><a href="link to question">asked by fredi</a><span title="time asked"></span></div>
       </div>
       <div class="content-container">
+        <div class="votes">
+          <div class="v-counts">
+            <span title="">2</span>
+          </div>
+          <div class="quote">votes</div>
+        </div>
+        <div class="answers">
+          <div class="ans-counts">
+            <span title="">3</span>
+          </div>
+          <div class="quote">answers</div>
+        </div>
+        <div class="ques-details">
+          <h3><a href="link to question">How do I use Css grid to layout my website</a></h3>
+        </div>
+        <div class="who-asked"><a href="link to question">asked by tosin</a><span title="time asked"></span></div>
+      </div>
+        <div class="content-container">
+          <div class="votes">
+            <div class="v-counts">
+              <span title="">3</span>
+            </div>
+            <div class="quote">votes</div>
+          </div>
+          <div class="answers">
+            <div class="ans-counts">
+              <span title="">5</span>
+            </div>
+            <div class="quote">answers</div>
+          </div>
+          <div class="ques-details">
+            <h3><a href="link to question">What is the difference between java and javascript</a></h3>
+          </div>
+          <div class="who-asked"><a href="link to question">asked by tobi</a><span title="time asked"></span></div>
+        </div>
+        <div class="content-container">
+          <div class="votes">
+            <div class="v-counts">
+              <span title="">1</span>
+            </div>
+            <div class="quote">votes</div>
+          </div>
+          <div class="answers">
+            <div class="ans-counts">
+              <span title="">5</span>
+            </div>
+            <div class="quote">answers</div>
+          </div>
+          <div class="ques-details">
+            <h3><a href="link to question">How do you add a sticky header effect on the header of your website?</a></h3>
+          </div>
+          <div class="who-asked"><a href="link to question">asked by somto</a><span title="time asked"></span></div>
+        </div>
+        <div class="content-container">
           <div class="votes">
             <div class="v-counts">
               <span title="">2</span>
+            </div>
+            <div class="quote">votes</div>
+          </div>
+          <div class="answers">
+            <div class="ans-counts">
+              <span title="">6</span>
+            </div>
+            <div class="quote">answers</div>
+          </div>
+          <div class="ques-details">
+            <h3><a href="link to question">How do I style my button to look nice?</a></h3>
+          </div>
+          <div class="who-asked"><a href="link to question">asked by emiko</a><span title="time asked"></span></div>
+        </div>
+        <div class="content-container">
+          <div class="votes">
+            <div class="v-counts">
+              <span title="">5</span>
             </div>
             <div class="quote">votes</div>
           </div>
@@ -78,100 +150,28 @@
             <div class="quote">answers</div>
           </div>
           <div class="ques-details">
-            <h3><a href="link to question">How do I use Css grid to layout my website</a></h3>
+            <h3><a href="link to question">How do i integrate travis with my project</a></h3>
           </div>
-          <div class="who-asked"><a href="link to question">asked by tosin</a><span title="time asked"></span></div>
+          <div class="who-asked"><a href="link to question">asked by sam</a><span title="time asked"></span></div>
         </div>
         <div class="content-container">
-            <div class="votes">
-              <div class="v-counts">
-                <span title="">3</span>
-              </div>
-              <div class="quote">votes</div>
+          <div class="votes">
+            <div class="v-counts">
+              <span title="">5</span>
             </div>
-            <div class="answers">
-              <div class="ans-counts">
-                <span title="">5</span>
-              </div>
-              <div class="quote">answers</div>
-            </div>
-            <div class="ques-details">
-              <h3><a href="link to question">What is the difference between java and javascript</a></h3>
-            </div>
-            <div class="who-asked"><a href="link to question">asked by tobi</a><span title="time asked"></span></div>
+            <div class="quote">votes</div>
           </div>
-          <div class="content-container">
-              <div class="votes">
-                <div class="v-counts">
-                  <span title="">1</span>
-                </div>
-                <div class="quote">votes</div>
-              </div>
-              <div class="answers">
-                <div class="ans-counts">
-                  <span title="">5</span>
-                </div>
-                <div class="quote">answers</div>
-              </div>
-              <div class="ques-details">
-                <h3><a href="link to question">How do you add a sticky header effect on the header of your website?</a></h3>
-              </div>
-              <div class="who-asked"><a href="link to question">asked by somto</a><span title="time asked"></span></div>
+          <div class="answers">
+            <div class="ans-counts">
+              <span title="">3</span>
             </div>
-            <div class="content-container">
-                <div class="votes">
-                  <div class="v-counts">
-                    <span title="">2</span>
-                  </div>
-                  <div class="quote">votes</div>
-                </div>
-                <div class="answers">
-                  <div class="ans-counts">
-                    <span title="">6</span>
-                  </div>
-                  <div class="quote">answers</div>
-                </div>
-                <div class="ques-details">
-                  <h3><a href="link to question">How do I style my button to look nice?</a></h3>
-                </div>
-                <div class="who-asked"><a href="link to question">asked by emiko</a><span title="time asked"></span></div>
-              </div>
-              <div class="content-container">
-                  <div class="votes">
-                    <div class="v-counts">
-                      <span title="">5</span>
-                    </div>
-                    <div class="quote">votes</div>
-                  </div>
-                  <div class="answers">
-                    <div class="ans-counts">
-                      <span title="">3</span>
-                    </div>
-                    <div class="quote">answers</div>
-                  </div>
-                  <div class="ques-details">
-                    <h3><a href="link to question">How do i integrate travis with my project</a></h3>
-                  </div>
-                  <div class="who-asked"><a href="link to question">asked by sam</a><span title="time asked"></span></div>
-                </div>
-                <div class="content-container">
-                    <div class="votes">
-                      <div class="v-counts">
-                        <span title="">5</span>
-                      </div>
-                      <div class="quote">votes</div>
-                    </div>
-                    <div class="answers">
-                      <div class="ans-counts">
-                        <span title="">3</span>
-                      </div>
-                      <div class="quote">answers</div>
-                    </div>
-                    <div class="ques-details">
-                      <h3><a href="link to question">How do i use html to build a website</a></h3>
-                    </div>
-                    <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
-                  </div>
+            <div class="quote">answers</div>
+          </div>
+          <div class="ques-details">
+            <h3><a href="link to question">How do i use html to build a website</a></h3>
+          </div>
+          <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
+          </div>
     </section>
   </main>
   <footer>
