signup page build a page that allow new visitors to the paltform the ability to register for the first time [Finished #159576658]

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="CSS/basic.css">
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="stylesheet" href="./CSS/web-fonts-with-css/css/fontawesome-all.min.css">
-  <title>StackOverflowLite | Register</title>
+  <title>StackOverflowLite | Register with us</title>
 </head>
 <body>
   <header id="header">
