post questions enable users to post questions via a textarea [Finished #159578049]

--- a/UI/homepage.html
+++ b/UI/homepage.html
@@ -13,7 +13,7 @@
   <header id="header">
     <div id="h-container">
       <div id="brand">
-        <a href="#"><h2>StackOverflow<span>Lite</span></h2></a>
+        <a href="index.html"><h2>StackOverflow<span>Lite</span></h2></a>
       </div>
       <div id="h-search">
         <input type="text" class="in-details" placeholder="Search using keyword...">
@@ -43,7 +43,7 @@
           <h1>Recent Questions</h1>
         </div>
         <div id="ask">
-          <button id="btn-ask">Ask Question</button>
+          <button id="btn-ask"><a href="askquestion.html">Ask Question</a></button>
         </div>
       </div>
       <div class="content-container">
