--- a/UI/index.html
+++ b/UI/index.html
@@ -43,7 +43,7 @@
           <h1>Recent Questions</h1>
         </div>
         <div id="ask">
-          <button id="btn-ask">Ask Question</button>
+          <button id="btn-ask"><a href="askquestion.html">Ask Question</a></button>
         </div>
       </div>
       <div class="content-container">
