--- a/UI/signup.html
+++ b/UI/signup.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="form-content">
-        <form action="#">
+        <form action="homepage.html">
           <div class="form-field">
             <div class="label-username">
               <label for="display-name" class="display">Username</label>
