posting answers and seeong all answers users should be able to post answers to questions and also see all answers to question [Finished #159577873] [Finished #159577732]

--- a/UI/index.html
+++ b/UI/index.html
@@ -60,9 +60,9 @@
           <div class="quote">answers</div>
         </div>
         <div class="ques-details">
-          <h3><a href="link to question">How do i use html to build a website</a></h3>
+          <h3><a href="answers.html">How do i use html to build a website</a></h3>
         </div>
-        <div class="who-asked"><a href="link to question">asked by fredi</a><span title="time asked"></span></div>
+        <div class="who-asked"><a href="answers.html">asked by fredi</a><span title="time asked"></span></div>
       </div>
       <div class="content-container">
         <div class="votes">
@@ -78,9 +78,9 @@
           <div class="quote">answers</div>
         </div>
         <div class="ques-details">
-          <h3><a href="link to question">How do I use Css grid to layout my website</a></h3>
+          <h3><a href="answers.html">How do I use Css grid to layout my website</a></h3>
         </div>
-        <div class="who-asked"><a href="link to question">asked by tosin</a><span title="time asked"></span></div>
+        <div class="who-asked"><a href="answers.html">asked by tosin</a><span title="time asked"></span></div>
       </div>
         <div class="content-container">
           <div class="votes">
@@ -96,9 +96,9 @@
             <div class="quote">answers</div>
           </div>
           <div class="ques-details">
-            <h3><a href="link to question">What is the difference between java and javascript</a></h3>
+            <h3><a href="answers.html">What is the difference between java and javascript</a></h3>
           </div>
-          <div class="who-asked"><a href="link to question">asked by tobi</a><span title="time asked"></span></div>
+          <div class="who-asked"><a href="answers.html">asked by tobi</a><span title="time asked"></span></div>
         </div>
         <div class="content-container">
           <div class="votes">
@@ -114,9 +114,9 @@
             <div class="quote">answers</div>
           </div>
           <div class="ques-details">
-            <h3><a href="link to question">How do you add a sticky header effect on the header of your website?</a></h3>
+            <h3><a href="answers.html">How do you add a sticky header effect on the header of your website?</a></h3>
           </div>
-          <div class="who-asked"><a href="link to question">asked by somto</a><span title="time asked"></span></div>
+          <div class="who-asked"><a href="answers.html">asked by somto</a><span title="time asked"></span></div>
         </div>
         <div class="content-container">
           <div class="votes">
@@ -132,9 +132,9 @@
             <div class="quote">answers</div>
           </div>
           <div class="ques-details">
-            <h3><a href="link to question">How do I style my button to look nice?</a></h3>
+            <h3><a href="answers.html">How do I style my button to look nice?</a></h3>
           </div>
-          <div class="who-asked"><a href="link to question">asked by emiko</a><span title="time asked"></span></div>
+          <div class="who-asked"><a href="answers.html">asked by emiko</a><span title="time asked"></span></div>
         </div>
         <div class="content-container">
           <div class="votes">
@@ -150,9 +150,9 @@
             <div class="quote">answers</div>
           </div>
           <div class="ques-details">
-            <h3><a href="link to question">How do i integrate travis with my project</a></h3>
+            <h3><a href="answers.html">How do i integrate travis with my project</a></h3>
           </div>
-          <div class="who-asked"><a href="link to question">asked by sam</a><span title="time asked"></span></div>
+          <div class="who-asked"><a href="answers.html">asked by sam</a><span title="time asked"></span></div>
         </div>
         <div class="content-container">
           <div class="votes">
@@ -168,9 +168,9 @@
             <div class="quote">answers</div>
           </div>
           <div class="ques-details">
-            <h3><a href="link to question">How do i use html to build a website</a></h3>
+            <h3><a href="answers.html">How do i use html to build a website</a></h3>
           </div>
-          <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
+          <div class="who-asked"><a href="answers.html">asked by james</a><span title="time asked"></span></div>
           </div>
     </section>
   </main>
