user profile page build a profile page that allow users edit their personal information [Finished #159588005]

--- a/UI/askquestion.html
+++ b/UI/askquestion.html
@@ -13,7 +13,7 @@
   <header id="header">
     <div id="h-container">
       <div id="brand">
-        <a href="index.html"><h2>StackOverflow<span>Lite</span></h2></a>
+        <a href="homepage.html"><h2>StackOverflow<span>Lite</span></h2></a>
       </div>
       <div id="h-search">
         <input type="text" class="in-details" placeholder="Search using keyword...">
