--- a/UI/login.html
+++ b/UI/login.html
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="formtext">
-            <p>No Account? <a href="usersignup.html">Sign Up</a> </p>
+            <p>No Account? <a href="signup.html">Sign Up</a> </p>
             <!-- <a href="#">Forgot your password?</a> -->
           </div>
         </form>
