number of questions asked on the platform should be availbale on the profile page add a link that can send users to the page with those information [#159588095]

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -69,20 +69,20 @@
           </div>
         </div>
         </form>
-        <!-- <div id="ques-et-answers">
+        <div id="ques-et-answers">
           <div>
             <h3><b>Questions</b></h3>
           </div>
           <div class="user-ques">
             <p>You have asked <span>3</span><a href="userquestion.html"> questions</a></p>
           </div>
-          <div>
+          <!-- <div>
             <h3><b>Answers</b></h3>
           </div>
           <div class="user-ans">
-            <p>You have <a href="useranswer.html">answered </a><span>4</span> questions</p>
+            <p>You have <a href="useranswer.html">answered </a><span>4</span> questions</p> -->
           </div>
-        </div> -->
+        </div>
       </section>
   </main>
   <footer>
