--- a/UI/profile.html
+++ b/UI/profile.html
@@ -21,7 +21,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Logout</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <!-- <li><a href="profile.html">Profile</a></li> -->
           </ul>
         </nav>
       </div>
@@ -79,8 +79,135 @@
         </form>
       </div>   
       <div id="Questions" class="tabcontent">
-        <h3>Paris</h3>
-        <p>Paris is the capital of France.</p> 
+        <h4>You have asked <span>7</span> <a href="link to userquestions">questions</a></h4>
+
+        <!--List of user questions-->
+        <div class="content-container">
+            <div class="votes">
+              <div class="v-counts">
+                <span title="">2</span>
+              </div>
+              <div class="quote">votes</div>
+            </div>
+            <div class="answers">
+              <div class="ans-counts">
+                <span title="">3</span>
+              </div>
+              <div class="quote">answers</div>
+            </div>
+            <div class="ques-details">
+              <h3><a href="answers.html">How do i use html to build a website</a></h3>
+            </div>
+            <div class="who-asked"><a href="answers.html">asked by fredi</a><span title="time asked"></span></div>
+          </div>
+          <div class="content-container">
+            <div class="votes">
+              <div class="v-counts">
+                <span title="">2</span>
+              </div>
+              <div class="quote">votes</div>
+            </div>
+            <div class="answers">
+              <div class="ans-counts">
+                <span title="">3</span>
+              </div>
+              <div class="quote">answers</div>
+            </div>
+            <div class="ques-details">
+              <h3><a href="answers.html">How do I use Css grid to layout my website</a></h3>
+            </div>
+            <div class="who-asked"><a href="answers.html">asked by tosin</a><span title="time asked"></span></div>
+          </div>
+            <div class="content-container">
+              <div class="votes">
+                <div class="v-counts">
+                  <span title="">3</span>
+                </div>
+                <div class="quote">votes</div>
+              </div>
+              <div class="answers">
+                <div class="ans-counts">
+                  <span title="">5</span>
+                </div>
+                <div class="quote">answers</div>
+              </div>
+              <div class="ques-details">
+                <h3><a href="answers.html">What is the difference between java and javascript</a></h3>
+              </div>
+              <div class="who-asked"><a href="answers.html">asked by tobi</a><span title="time asked"></span></div>
+            </div>
+            <div class="content-container">
+              <div class="votes">
+                <div class="v-counts">
+                  <span title="">1</span>
+                </div>
+                <div class="quote">votes</div>
+              </div>
+              <div class="answers">
+                <div class="ans-counts">
+                  <span title="">5</span>
+                </div>
+                <div class="quote">answers</div>
+              </div>
+              <div class="ques-details">
+                <h3><a href="answers.html">How do you add a sticky header effect on the header of your website?</a></h3>
+              </div>
+              <div class="who-asked"><a href="answers.html">asked by somto</a><span title="time asked"></span></div>
+            </div>
+            <div class="content-container">
+              <div class="votes">
+                <div class="v-counts">
+                  <span title="">2</span>
+                </div>
+                <div class="quote">votes</div>
+              </div>
+              <div class="answers">
+                <div class="ans-counts">
+                  <span title="">6</span>
+                </div>
+                <div class="quote">answers</div>
+              </div>
+              <div class="ques-details">
+                <h3><a href="answers.html">How do I style my button to look nice?</a></h3>
+              </div>
+              <div class="who-asked"><a href="answers.html">asked by emiko</a><span title="time asked"></span></div>
+            </div>
+            <div class="content-container">
+              <div class="votes">
+                <div class="v-counts">
+                  <span title="">5</span>
+                </div>
+                <div class="quote">votes</div>
+              </div>
+              <div class="answers">
+                <div class="ans-counts">
+                  <span title="">3</span>
+                </div>
+                <div class="quote">answers</div>
+              </div>
+              <div class="ques-details">
+                <h3><a href="answers.html">How do i integrate travis with my project</a></h3>
+              </div>
+              <div class="who-asked"><a href="answers.html">asked by sam</a><span title="time asked"></span></div>
+            </div>
+            <div class="content-container">
+              <div class="votes">
+                <div class="v-counts">
+                  <span title="">5</span>
+                </div>
+                <div class="quote">votes</div>
+              </div>
+              <div class="answers">
+                <div class="ans-counts">
+                  <span title="">3</span>
+                </div>
+                <div class="quote">answers</div>
+              </div>
+              <div class="ques-details">
+                <h3><a href="answers.html">How do i use html to build a website</a></h3>
+              </div>
+              <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
+              </div> 
       </div>
       <div id="Answers" class="tabcontent">
         <h3>Tokyo</h3>
