profile page with the most answers the page should have a section to show answers with the most answers [#159588335]

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -83,135 +83,172 @@
 
         <!--List of user questions-->
         <div class="content-container">
-            <div class="votes">
-              <div class="v-counts">
-                <span title="">2</span>
-              </div>
-              <div class="quote">votes</div>
-            </div>
-            <div class="answers">
-              <div class="ans-counts">
-                <span title="">3</span>
-              </div>
-              <div class="quote">answers</div>
-            </div>
-            <div class="ques-details">
-              <h3><a href="answers.html">How do i use html to build a website</a></h3>
-            </div>
-            <div class="who-asked"><a href="answers.html">asked by fredi</a><span title="time asked"></span></div>
+      <div class="votes">
+        <div class="v-counts">
+          <span title="">2</span>
+        </div>
+        <div class="quote">votes</div>
+      </div>
+      <div class="answers">
+        <div class="ans-counts">
+          <span title="">3</span>
+        </div>
+        <div class="quote">answers</div>
+      </div>
+      <div class="ques-details">
+        <h3><a href="answers.html">How do i use html to build a website</a></h3>
+      </div>
+      <div class="who-asked"><a href="answers.html">asked by fredi</a><span title="time asked"></span></div>
+    </div>
+    <div class="content-container">
+      <div class="votes">
+        <div class="v-counts">
+          <span title="">2</span>
+        </div>
+        <div class="quote">votes</div>
+      </div>
+      <div class="answers">
+        <div class="ans-counts">
+          <span title="">3</span>
+        </div>
+        <div class="quote">answers</div>
+      </div>
+      <div class="ques-details">
+        <h3><a href="answers.html">How do I use Css grid to layout my website</a></h3>
+      </div>
+      <div class="who-asked"><a href="answers.html">asked by tosin</a><span title="time asked"></span></div>
+    </div>
+      <div class="content-container">
+        <div class="votes">
+          <div class="v-counts">
+            <span title="">3</span>
           </div>
-          <div class="content-container">
-            <div class="votes">
-              <div class="v-counts">
-                <span title="">2</span>
-              </div>
-              <div class="quote">votes</div>
-            </div>
-            <div class="answers">
-              <div class="ans-counts">
-                <span title="">3</span>
-              </div>
-              <div class="quote">answers</div>
-            </div>
-            <div class="ques-details">
-              <h3><a href="answers.html">How do I use Css grid to layout my website</a></h3>
-            </div>
-            <div class="who-asked"><a href="answers.html">asked by tosin</a><span title="time asked"></span></div>
+          <div class="quote">votes</div>
+        </div>
+        <div class="answers">
+          <div class="ans-counts">
+            <span title="">5</span>
           </div>
-            <div class="content-container">
-              <div class="votes">
-                <div class="v-counts">
-                  <span title="">3</span>
-                </div>
-                <div class="quote">votes</div>
-              </div>
-              <div class="answers">
-                <div class="ans-counts">
-                  <span title="">5</span>
-                </div>
-                <div class="quote">answers</div>
-              </div>
-              <div class="ques-details">
-                <h3><a href="answers.html">What is the difference between java and javascript</a></h3>
-              </div>
-              <div class="who-asked"><a href="answers.html">asked by tobi</a><span title="time asked"></span></div>
-            </div>
-            <div class="content-container">
-              <div class="votes">
-                <div class="v-counts">
-                  <span title="">1</span>
-                </div>
-                <div class="quote">votes</div>
-              </div>
-              <div class="answers">
-                <div class="ans-counts">
-                  <span title="">5</span>
-                </div>
-                <div class="quote">answers</div>
-              </div>
-              <div class="ques-details">
-                <h3><a href="answers.html">How do you add a sticky header effect on the header of your website?</a></h3>
-              </div>
-              <div class="who-asked"><a href="answers.html">asked by somto</a><span title="time asked"></span></div>
-            </div>
-            <div class="content-container">
-              <div class="votes">
-                <div class="v-counts">
-                  <span title="">2</span>
-                </div>
-                <div class="quote">votes</div>
-              </div>
-              <div class="answers">
-                <div class="ans-counts">
-                  <span title="">6</span>
-                </div>
-                <div class="quote">answers</div>
-              </div>
-              <div class="ques-details">
-                <h3><a href="answers.html">How do I style my button to look nice?</a></h3>
-              </div>
-              <div class="who-asked"><a href="answers.html">asked by emiko</a><span title="time asked"></span></div>
-            </div>
-            <div class="content-container">
-              <div class="votes">
-                <div class="v-counts">
-                  <span title="">5</span>
-                </div>
-                <div class="quote">votes</div>
-              </div>
-              <div class="answers">
-                <div class="ans-counts">
-                  <span title="">3</span>
-                </div>
-                <div class="quote">answers</div>
-              </div>
-              <div class="ques-details">
-                <h3><a href="answers.html">How do i integrate travis with my project</a></h3>
-              </div>
-              <div class="who-asked"><a href="answers.html">asked by sam</a><span title="time asked"></span></div>
-            </div>
-            <div class="content-container">
-              <div class="votes">
-                <div class="v-counts">
-                  <span title="">5</span>
-                </div>
-                <div class="quote">votes</div>
-              </div>
-              <div class="answers">
-                <div class="ans-counts">
-                  <span title="">3</span>
-                </div>
-                <div class="quote">answers</div>
-              </div>
-              <div class="ques-details">
-                <h3><a href="answers.html">How do i use html to build a website</a></h3>
-              </div>
-              <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
-              </div> 
+          <div class="quote">answers</div>
+        </div>
+        <div class="ques-details">
+          <h3><a href="answers.html">What is the difference between java and javascript</a></h3>
+        </div>
+        <div class="who-asked"><a href="answers.html">asked by tobi</a><span title="time asked"></span></div>
+      </div>
+      <div class="content-container">
+        <div class="votes">
+          <div class="v-counts">
+            <span title="">1</span>
+          </div>
+          <div class="quote">votes</div>
+        </div>
+        <div class="answers">
+          <div class="ans-counts">
+            <span title="">5</span>
+          </div>
+          <div class="quote">answers</div>
+        </div>
+        <div class="ques-details">
+          <h3><a href="answers.html">How do you add a sticky header effect on the header of your website?</a></h3>
+        </div>
+        <div class="who-asked"><a href="answers.html">asked by somto</a><span title="time asked"></span></div>
+      </div>
+      <div class="content-container">
+        <div class="votes">
+          <div class="v-counts">
+            <span title="">2</span>
+          </div>
+          <div class="quote">votes</div>
+        </div>
+        <div class="answers">
+          <div class="ans-counts">
+            <span title="">6</span>
+          </div>
+          <div class="quote">answers</div>
+        </div>
+        <div class="ques-details">
+          <h3><a href="answers.html">How do I style my button to look nice?</a></h3>
+        </div>
+        <div class="who-asked"><a href="answers.html">asked by emiko</a><span title="time asked"></span></div>
+      </div>
+      <div class="content-container">
+        <div class="votes">
+          <div class="v-counts">
+            <span title="">5</span>
+          </div>
+          <div class="quote">votes</div>
+        </div>
+        <div class="answers">
+          <div class="ans-counts">
+            <span title="">3</span>
+          </div>
+          <div class="quote">answers</div>
+        </div>
+        <div class="ques-details">
+          <h3><a href="answers.html">How do i integrate travis with my project</a></h3>
+        </div>
+        <div class="who-asked"><a href="answers.html">asked by sam</a><span title="time asked"></span></div>
+      </div>
+      <div class="content-container">
+        <div class="votes">
+          <div class="v-counts">
+            <span title="">5</span>
+          </div>
+          <div class="quote">votes</div>
+        </div>
+        <div class="answers">
+          <div class="ans-counts">
+            <span title="">3</span>
+          </div>
+          <div class="quote">answers</div>
+        </div>
+        <div class="ques-details">
+          <h3><a href="answers.html">How do i use html to build a website</a></h3>
+        </div>
+        <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
+        </div> 
       </div>
       <div id="Answers" class="tabcontent">
-        <h3>Tokyo</h3>
-        <p>Tokyo is the capital of Japan.</p>
+        <h4>Here is a lis of your questions with the most answers</h4>
+
+        <!--A list of user questions with the most answers-->
+        <div class="content-container">
+          <div class="votes">
+            <div class="v-counts">
+              <span title="">5</span>
+            </div>
+            <div class="quote">votes</div>
+          </div>
+          <div class="answers">
+            <div class="ans-counts">
+              <span title="">7</span>
+            </div>
+            <div class="quote">answers</div>
+          </div>
+          <div class="ques-details">
+            <h3><a href="answers.html">How do i integrate travis with my project</a></h3>
+          </div>
+          <div class="who-asked"><a href="answers.html">asked by sam</a><span title="time asked"></span></div>
+        </div>
+        <div class="content-container">
+          <div class="votes">
+            <div class="v-counts">
+              <span title="">5</span>
+            </div>
+            <div class="quote">votes</div>
+          </div>
+          <div class="answers">
+            <div class="ans-counts">
+              <span title="">8</span>
+            </div>
+            <div class="quote">answers</div>
+          </div>
+          <div class="ques-details">
+            <h3><a href="answers.html">How do i use html to build a website</a></h3>
+          </div>
+          <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
+          </div>
       </div>
     </section>
   </main>
