chore(refactorUI): refactor UI from LFA feedback
> remove the search field hover colour
> Remove button highlighting
> enclose textarea on a form
> refactor sigup and signin page
> change footer color
> remove background color, make it grey
> change logout and profile buttons to a differnet color
make mobile responsive
search button should be bigger
change font weight
remove the text input highlight when in focus
remove button highlighting when in focus
enclose text area or inputs in a form

[Finishes #159918243]

--- a/UI/index.html
+++ b/UI/index.html
@@ -16,8 +16,10 @@
         <a href="#"><h2>StackOverflow<span>Lite</span></h2></a>
       </div>
       <div id="h-search">
-        <input type="text" class="in-details" placeholder="Search using keyword...">
-        <button id="btn-search" type="submit"><i class="fas fa-search"></i></button>
+        <form action="#">
+          <input type="text" class="in-details" placeholder="Search using keyword...">
+          <button id="btn-search" type="submit"><i class="fas fa-search"></i></button>
+        </form>
         <nav>
           <ul>
             <li><a href="signup.html">SignUp</a></li>
