--- a/UI/profile.html
+++ b/UI/profile.html
@@ -16,8 +16,10 @@
         <a href="homepage.html"><h2>StackOverflow<span>Lite</span></h2></a>
       </div>
       <div id="h-search">
-        <input type="text" class="in-details" placeholder="Search using keyword...">
-        <button id="btn-search" type="submit"><i class="fas fa-search"></i></button>
+        <form action="#">
+          <input type="text" class="in-details" placeholder="Search using keyword...">
+          <button id="btn-search" type="submit"><i class="fas fa-search"></i></button>
+        </form>
         <nav>
           <ul>
             <li><a href="index.html">Logout</a></li>
@@ -61,17 +63,17 @@
               <input type="email" name="inline-email" value="you@emaple.com" required>
             </div>
             <div class="label-password">
-              <label for="display-password" class="display">Change Password</label>
+              <label for="display-password" class="display">Password</label>
             </div>
             <div class="in-password">
               <input type="password" name="inline-password" value="*******" minlength="6" maxlength="12" required>
             </div>
-            <div class="label-password">
+            <!-- <div class="label-password">
               <label for="display-password" class="display">Confirm Password</label>
             </div>
             <div class="in-password">
               <input type="password" name="inline-password" value="*******" minlength="6" maxlength="12" required>
-            </div>
+            </div> -->
             <div id="btn-save">
               <button>Save</button>
             </div>
