--- a/UI/signup.html
+++ b/UI/signup.html
@@ -16,8 +16,10 @@
         <a href="index.html"><h2>StackOverflow<span>Lite</span></h2></a>
       </div>
       <div id="h-search">
-        <input type="text" class="in-details" placeholder="Search using keyword...">
-        <button id="btn-search" type="submit"><i class="fas fa-search"></i></button>
+        <form action="#">
+          <input type="text" class="in-details" placeholder="Search using keyword...">
+          <button id="btn-search" type="submit"><i class="fas fa-search"></i></button>
+        </form>
         <!-- <nav>
           <ul>
             <li><a href="#"></a></li>
@@ -56,7 +58,7 @@
               <input type="password" name="inline-password" placeholder="*******" minlength="6" maxlength="12" required>
             </div>
             <div class="label-password">
-              <label for="display-password" class="display">Confirm Password</label>
+              <label for="display-password" class="display">Confirm</label>
             </div>
             <div class="in-password">
               <input type="password" name="inline-password" placeholder="*******" minlength="6" maxlength="12" required>
