--- a/UI/index.html
+++ b/UI/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="CSS/basic.css">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="./CSS/web-fonts-with-css/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="/UI/CSS/basic.css">
+  <link rel="stylesheet" href="/UI/CSS/style.css">
+  <link rel="stylesheet" href="/UI/CSS/web-fonts-with-css/css/fontawesome-all.min.css">
   <title>StackOverflowLite | Welcome</title>
 </head>
 <body>
@@ -22,8 +22,8 @@
         </form>
         <nav>
           <ul>
-            <li><a href="signup.html">SignUp</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="/UI/signup.html">SignUp</a></li>
+            <li><a href="/UI/login.html">Login</a></li>
           </ul>
         </nav>
       </div>
